css/style.css
/* ... */
@font-face {
    font-family: "gilroyextrabold";
    src: url("../fonts/gilroyextrabold.woff2") format("woff2"),
         url("../fonts/gilroyextrabold.woff") format("woff");
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: "opensans";
    src: url("../fonts/opensans.woff2") format("woff2"),
         url("../fonts/opensans.woff") format("woff");
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: "opensanslight";
    src: url("../fonts/opensanslight.woff2") format("woff2"),
         url("../fonts/opensanslight.woff") format("woff");
    font-weight: normal;
    font-style: normal;

}

/* ============== GENERAL ============== */
html {
  box-sizing: border-box;
}

*,
*::after,
*::before {
  box-sizing: inherit;
}


body {
	margin: 0;
	padding: 0;
	min-width: 1200px;
	
	font-family: "opensanslight", Arial, sans-serif;
	font-size: 15px;
	line-height: 30px;
	color: #464646;

	background-color: #ffffff;
}

img {
	max-width: 100%;
	height: auto;
}

a {
	text-decoration: none;
}

.wrapper {
	margin: 0 auto;
	padding: 0 20px;
	width: 1200px;
}

.visually-hidden:not(:focus):not(:active),
input[type="checkbox"].visually-hidden,
input[type="radio"].visually-hidden {
  position: absolute;

  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;

  white-space: nowrap;

  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

/* ============== HEADER ============== */

.main-header {
	padding-top: 40px;

	line-height: 36px;
	color: #000000;	
}

.main-navigation {
	padding-top: 1px; /* this is necessary for negative margin of header logo to take effect */
	padding-left: 59px;
	padding-right: 60px;
	padding-bottom: 162px;

	background-color: #f7e296;
}

.main-navigation.inner-page {
	padding-bottom: 49px;
	margin-bottom: 33px;
}

.main-header-logo {
	display: block;
	margin-bottom: 17px;
	margin-top: -20px;
	width: 164px;
	height: 36px;
}

.main-navigation.inner-page .main-header-logo {
	margin-bottom: 15px;
	margin-top: -18px;
}

.main-navigation .wrapper-top {
	display: flex;
	align-items: baseline;
	margin-bottom: 32px;
}


.main-navigation a {
	color: #000000;
}

.main-navigation a:hover,
.main-navigation a:focus,
.main-header-logo:hover img,
.main-header-logo:focus img {
	opacity: .6;
}

.main-navigation a:active,
.main-header-logo:active img {
	opacity: .3;
}

.site-navigation,
.user-navigation,
.goods-actions,
.catalog-menu {
	list-style: none;
	margin: 0;
	padding: 0;
}


.user-navigation {
	display: flex;
	flex-wrap: wrap;
	width: 260px;
}

.user-navigation li {
	padding-right: 20px;
}

.user-login a:before,
.user-profile a:before {
	content: "";
	display: inline-block;
	width: 13px;
	height: 12px;
	margin-right: 13px;
	
	background-image: url("../img/icons/user_icon.svg");
	background-repeat: no-repeat;
  	background-position: 0 0;
}

.user-logout a {
	color: rgba(0, 0, 0, .3);
}

.goods-actions {
	display: flex;
	justify-content: space-between;
	flex-wrap: wrap;
	width: 220px;
	margin-left: auto;
	padding-left: 7px;
}

.goods-actions li:not(:last-of-type) {
	padding-right:10px;
}

.goods-cart {
	text-align: right;
}

.goods-cart a::before {
	content: "";
	display: inline-block;
	width: 12px;
	height: 12px;
	margin-right: 12px;
	
	background-image: url("../img/icons/cart_icon.svg");
	background-repeat: no-repeat;
  	background-position: 0 0;
}

.goods-compare a::before {
	content: "";
	display: inline-block;
	width: 10px;
	height: 10px;
	margin-right: 10px;
	
	background-image: url("../img/icons/compare_icon.svg");
	background-repeat: no-repeat;
  	background-position: 0 0;
}

.main-search {
	display: flex;
	flex-wrap: wrap;
	position: relative;
	
	width: 500px;
	margin-right: 41px;
}

.main-search input[type="text"] {
	display: block;
	margin: 0;
	padding-right: 0;
	padding-top: 3.5px;
	padding-bottom: 5.5px;
	padding-left: 39px;

	width: 356px;

	font-family: "opensanslight", Arial, sans-serif;
	font-size: 15px;
	line-height: 36px;
	letter-spacing: .01em;
	color: rgba(0, 0, 0, .1);

	border: 0;
	border-top: 2px solid transparent;
	border-bottom: 2px solid transparent;
	
	background-color: transparent;
}


.main-search input[type="text"]:focus {
	border-bottom: 2px solid #000000;
	color: rgb(0, 0, 0);
	outline: none;
}

.main-search input[placeholder] 					{ color: rgba(0, 0, 0, .3); }
.main-search input::-webkit-input-placeholder 		{ color: rgba(0, 0, 0, .3); }
.main-search input::-moz-placeholder 				{ color: rgba(0, 0, 0, .3); }
.main-search input:-moz-placeholder 				{ color: rgba(0, 0, 0, .3); }
.main-search input:-ms-input-placeholder 			{ color: rgba(0, 0, 0, .3); }

.main-search input[placeholder]:hover 					{ color: rgba(0, 0, 0, .6); }
.main-search input:hover::-webkit-input-placeholder		{ color: rgba(0, 0, 0, .6); }
.main-search input:hover::-moz-placeholder 				{ color: rgba(0, 0, 0, .6); }
.main-search input:hover:-moz-placeholder				{ color: rgba(0, 0, 0, .6); }
.main-search input:hover:-ms-input-placeholder			{ color: rgba(0, 0, 0, .6); }

.main-search input[placeholder]:focus 					{ color: rgba(0, 0, 0, 1); }
.main-search input:focus::-webkit-input-placeholder		{ color: rgba(0, 0, 0, 1); }
.main-search input:focus::-moz-placeholder 				{ color: rgba(0, 0, 0, 1); }
.main-search input:focus:-moz-placeholder				{ color: rgba(0, 0, 0, 1); }
.main-search input:focus:-ms-input-placeholder			{ color: rgba(0, 0, 0, 1); }

.main-search label[for="main_search_input"] {
	position: absolute;
	display: block;
	width: 16px;
	height: 16px;
	left: 4px;
	top: 50%;
	margin-top: -8px;
	background-image: url("../img/icons/search_icon.svg");
	background-repeat: no-repeat;
	background-position: left center;
	cursor: pointer;
}
/* ... */

